apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        supplementalGroups:
          - 26
          - 303
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin@sha256:32aa0d4565c633db95af29a58e8a5dc9becdfa58564a3aea68436623fd45f5a1
          ports:
            - name: web
              containerPort: 8096
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: transmission-data
              mountPath: /media/transmission
              readOnly: true
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data
            readOnly: true
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
