apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8096
      targetPort: 8096
